# meson.build.gen: *.c
src = files(
  'array_append.c',
  'array_clone.c',
  'array_compact.c',
  'array_insert.c',
  'array_message.c',
  'array_push.c',
  'array_reduce.c',
  'array_reserve.c',
  'array_set.c',
  'array_slice.c',
  'array_string.c',
  'array_traits.c',
  'bitmap.c',
  'buffer.c',
  'buffer_cut.c',
  'buffer_data.c',
  'buffer_insert.c',
  'buffer_set.c',
  'copy32.c',
  'copy64.c',
  'copy_df.c',
  'copy_fd.c',
  'drange.c',
  'frange.c',
  'irange.c',
  'map.c',
  'message_iterator.c',
  'meta_buffer.c',
  'printf.c',
  'slice_get.c',
  'slice_write.c',
)
