# meson.build.gen: suffix=c
src = files(
 # match: *.c
  'path_addchar.c',
  'path_append.c',
  'path_del.c',
  'path_fini.c',
  'path_fputs.c',
  'path_last.c',
  'path_next.c',
  'path_set.c',
  'path_valid.c',
  'path_add.c',
  'config_set.c',
  'config_get.c',
  'node_query.c',
  'config_read.c',
  'node_get.c',
  'config_environ.c',
)
