# meson.build.gen: *.c
src = files(
  'config_args.c',
  'config_clear.c',
  'config_environ.c',
  'config_get.c',
  'config_global.c',
  'config_load.c',
  'config_logger.c',
  'config_set.c',
  'node_assign.c',
  'node_query.c',
  'path_add.c',
  'path_addchar.c',
  'path_data.c',
  'path_del.c',
  'path_fini.c',
  'path_fputs.c',
  'path_last.c',
  'path_next.c',
  'path_set.c',
  'path_valid.c',
)
