# meson.build.gen: *.c
src = files(
  'bswap.c',
  'cdouble.c',
  'cfloat.c',
  'cldouble.c',
  'convert_int.c',
  'convert_key.c',
  'convert_number.c',
  'convert_string.c',
  'data_convert.c',
  'data_convert_array.c',
  'data_convert_float.c',
  'data_convert_int.c',
  'data_converter.c',
  'data_tostring.c',
  'decode_cobs.c',
  'decode_cobs_zpe.c',
  'decode_command.c',
  'decoder.c',
  'encode_cobs.c',
  'encode_cobs_r.c',
  'encode_cobs_zpe.c',
  'encode_string.c',
  'encoder.c',
  'encoding.c',
  'float80.c',
  'newline_string.c',
  'number_print.c',
  'scalar_argv.c',
  'string_dest.c',
  'tostring.c',
  'type_int.c',
  'valfmt_add.c',
  'valfmt_get.c',
  'valfmt_parse.c',
  'valfmt_set.c',
)
