# meson.build.gen: *.c
src = files(
  'bswap.c',
  'cdouble.c',
  'cfloat.c',
  'cldouble.c',
  'convert_int.c',
  'convert_key.c',
  'convert_number.c',
  'convert_string.c',
  'data_convert_array.c',
  'data_convert_float.c',
  'data_convert_int.c',
  'data_converter.c',
  'data_tostring.c',
  'decode_cobs.c',
  'decode_cobs_zpe.c',
  'decode_command.c',
  'decoder.c',
  'encode_cobs.c',
  'encode_cobs_r.c',
  'encode_cobs_zpe.c',
  'encode_string.c',
  'encoder.c',
  'encoding.c',
  'newline_string.c',
  'number_tostring.c',
  'print_convertable.c',
  'print_object.c',
  'print_value.c',
  'string_dest.c',
  'valfmt_add.c',
  'valfmt_get.c',
  'valfmt_parse.c',
  'valfmt_set.c',
  'value_convert.c',
)
