# meson.build.gen: *.c
src = files(
  'command_get.c',
  'command_reserve.c',
  'command_set.c',
  'context_reply.c',
  'dispatch_emit.c',
  'dispatch_finit.c',
  'dispatch_hash.c',
  'dispatch_param.c',
  'dispatch_set.c',
  'event_command.c',
  'notify_dispatch.c',
  'reply_deferrable.c',
  'reply_set.c',
)
