# meson.build.gen: suffix=c
src = files(
 # match: *.c
  'memchr.c',
  'memcpy.c',
  'memstr.c',
  'message_argv.c',
  'message_nextid.c',
  'message_read.c',
  'outfmt_setget.c',
  'message_pset.c',
  'message_get.c',
  'memtok.c',
  'memfcn.c',
  'output_level.c',
  'message_identifier.c',
  'message_print.c',
  'ansi_code.c',
  'output_log.c',
  'output_file.c',
)
