# meson.build.gen: suffix=c
src = files(
 # match: *.c
  'ansi_code.c',
  'memchr.c',
  'memcpy.c',
  'memfcn.c',
  'memstr.c',
  'memtok.c',
  'message_argv.c',
  'message_get.c',
  'message_identifier.c',
  'message_nextid.c',
  'message_print.c',
  'message_pset.c',
  'message_read.c',
  'output_file.c',
  'output_level.c',
  'output_log.c',
)
