# meson.build.gen: *.c
src = files(
  'ansi_code.c',
  'memchr.c',
  'memcpy.c',
  'memfcn.c',
  'memstr.c',
  'memtok.c',
  'message_append.c',
  'message_argv.c',
  'message_get.c',
  'message_id.c',
  'message_print.c',
  'message_pset.c',
  'message_read.c',
  'msgvalfmt.c',
  'string_dest.c',
)
