# meson.build.gen: *.c
src = files(
  'abort.c',
  'generic_foreach.c',
  'geninfo.c',
  'geninfo_clone.c',
  'identifier.c',
  'init.c',
  'mode_parse.c',
  'offset.c',
  'position.c',
  'process_vararg.c',
  'property_match.c',
  'refcount.c',
  'valsize.c',
  'valtype.c',
  'value_compare.c',
  'value_read.c',
)
