# meson.build.gen: *.c
src = files(
  'abort.c',
  'alias_typeid.c',
  'geninfo.c',
  'geninfo_clone.c',
  'hash.c',
  'hash_djb2.c',
  'hash_smdb.c',
  'identifier.c',
  'init.c',
  'mode_parse.c',
  'offset.c',
  'position.c',
  'process_vararg.c',
  'refcount.c',
  'valsize.c',
  'valtype.c',
  'valtype_generic_new.c',
  'value_compare.c',
  'value_read.c',
)
