# meson.build.gen: suffix=c
src = files(
 # match: *.c
  'gnode_after.c',
  'gnode_before.c',
  'gnode_level.c',
  'gnode_pos.c',
  'gnode_relink.c',
  'gnode_swap.c',
  'gnode_traverse.c',
  'node_clear.c',
  'node_destroy.c',
  'node_find.c',
  'node_unlink.c',
  'tree_copy.c',
  'node_set.c',
  'node_ident.c',
  'node_move.c',
  'node_locate.c',
  'node_clone.c',
  'node_copy.c',
  'node_foreach.c',
  'node_insert.c',
  'node_new.c',
)
