# meson.build.gen: *.c
src = files(
  'convertable_info.c',
  'message_properties.c',
  'object_args.c',
  'object_foreach.c',
  'object_set.c',
  'object_set_iterator.c',
  'object_set_nodes.c',
  'object_set_property.c',
  'object_set_string.c',
  'object_set_value.c',
  'object_typename.c',
  'properties_foreach.c',
  'properties_print.c',
  'property_match.c',
)
