# meson.build.gen: *.c
src = files(
  'ansi_code.c',
  'histfmt_reset.c',
  'history_fini.c',
  'history_log.c',
  'history_print.c',
  'history_property.c',
  'layout_open.c',
  'output_bind_list.c',
  'output_bind_string.c',
  'output_flags.c',
  'output_init_plot.c',
  'output_init_raw.c',
  'output_log.c',
  'output_values.c',
)
